--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^11.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.5",
     "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
